// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute openedenAddress endpoint other type should return success 1`] = `
{
  "data": {
    "result": [
      {
        "chainId": "1",
        "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
        "network": "Ethereum Mainnet",
        "token": "USDC",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x7712c34205737192402172409a8F7ccef8aA2AEc",
        "network": "Ethereum Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "42161",
        "contractAddress": "0xaf88d065e77c8cC2239327C5EDb3A432268e5831",
        "network": "Arbitrum One",
        "token": "USDC",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "8453",
        "contractAddress": "0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913",
        "network": "Base",
        "token": "USDC",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
        "network": "Ethereum Mainnet",
        "token": "USDC",
        "wallets": [
          "0x5E6c2AD8376A9E5E857B1d91643399E9aB65ff8c",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x7712c34205737192402172409a8F7ccef8aA2AEc",
        "network": "Ethereum Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x5E6c2AD8376A9E5E857B1d91643399E9aB65ff8c",
        ],
      },
      {
        "chainId": "42161",
        "contractAddress": "0xaf88d065e77c8cC2239327C5EDb3A432268e5831",
        "network": "Arbitrum One",
        "token": "USDC",
        "wallets": [
          "0xaAb4Ea02e5616787931c9E8283cb27F0211DC116",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x3DDc84940Ab509C11B20B76B466933f40b750dc9",
        "network": "Ethereum Mainnet",
        "token": "BENJI",
        "wallets": [
          "0x602a1cb1f821A3e8f507A7637a4BE7Af19578F75",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x2255718832bC9fD3bE1CaF75084F4803DA14FF01",
        "network": "Ethereum Mainnet",
        "token": "VBILL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x2255718832bC9fD3bE1CaF75084F4803DA14FF01",
        "network": "Ethereum Mainnet",
        "token": "VBILL",
        "wallets": [
          "0x5E6c2AD8376A9E5E857B1d91643399E9aB65ff8c",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x2255718832bC9fD3bE1CaF75084F4803DA14FF01",
        "network": "Ethereum Mainnet",
        "token": "VBILL",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
        "network": "Ethereum Mainnet",
        "token": "USDC",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x7712c34205737192402172409a8F7ccef8aA2AEc",
        "network": "Ethereum Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
      {
        "chainId": "137",
        "contractAddress": "0x2893Ef551B6dD69F661Ac00F11D93E5Dc5Dc0e99",
        "network": "Polygon Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x895e873498134D2ce2AB118633E164C044bC7B43",
        ],
      },
      {
        "chainId": "137",
        "contractAddress": "0x2893Ef551B6dD69F661Ac00F11D93E5Dc5Dc0e99",
        "network": "Polygon Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "56",
        "contractAddress": "0x8AC76a51cc950d9822D68b83fE1Ad97B32Cd580d",
        "network": "BSC Mainnet",
        "token": "USDC(Binance-Peg)",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute openedenAddress endpoint pegged type should return success 1`] = `
{
  "data": {
    "result": [
      {
        "chainId": "1",
        "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
        "network": "Ethereum Mainnet",
        "token": "USDC",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x7712c34205737192402172409a8F7ccef8aA2AEc",
        "network": "Ethereum Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "42161",
        "contractAddress": "0xaf88d065e77c8cC2239327C5EDb3A432268e5831",
        "network": "Arbitrum One",
        "token": "USDC",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "8453",
        "contractAddress": "0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913",
        "network": "Base",
        "token": "USDC",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
        "network": "Ethereum Mainnet",
        "token": "USDC",
        "wallets": [
          "0x5E6c2AD8376A9E5E857B1d91643399E9aB65ff8c",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x7712c34205737192402172409a8F7ccef8aA2AEc",
        "network": "Ethereum Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x5E6c2AD8376A9E5E857B1d91643399E9aB65ff8c",
        ],
      },
      {
        "chainId": "42161",
        "contractAddress": "0xaf88d065e77c8cC2239327C5EDb3A432268e5831",
        "network": "Arbitrum One",
        "token": "USDC",
        "wallets": [
          "0xaAb4Ea02e5616787931c9E8283cb27F0211DC116",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x3DDc84940Ab509C11B20B76B466933f40b750dc9",
        "network": "Ethereum Mainnet",
        "token": "BENJI",
        "wallets": [
          "0x602a1cb1f821A3e8f507A7637a4BE7Af19578F75",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x2255718832bC9fD3bE1CaF75084F4803DA14FF01",
        "network": "Ethereum Mainnet",
        "token": "VBILL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x2255718832bC9fD3bE1CaF75084F4803DA14FF01",
        "network": "Ethereum Mainnet",
        "token": "VBILL",
        "wallets": [
          "0x5E6c2AD8376A9E5E857B1d91643399E9aB65ff8c",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x2255718832bC9fD3bE1CaF75084F4803DA14FF01",
        "network": "Ethereum Mainnet",
        "token": "VBILL",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
        "network": "Ethereum Mainnet",
        "token": "USDC",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x7712c34205737192402172409a8F7ccef8aA2AEc",
        "network": "Ethereum Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
      {
        "chainId": "137",
        "contractAddress": "0x2893Ef551B6dD69F661Ac00F11D93E5Dc5Dc0e99",
        "network": "Polygon Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x895e873498134D2ce2AB118633E164C044bC7B43",
        ],
      },
      {
        "chainId": "137",
        "contractAddress": "0x2893Ef551B6dD69F661Ac00F11D93E5Dc5Dc0e99",
        "network": "Polygon Mainnet",
        "token": "BUIDL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "56",
        "contractAddress": "0x8AC76a51cc950d9822D68b83fE1Ad97B32Cd580d",
        "network": "BSC Mainnet",
        "token": "USDC(Binance-Peg)",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute openedenAddress endpoint priced type should return success 1`] = `
{
  "data": {
    "result": [
      {
        "chainId": "1",
        "contractAddress": "0xdd50C053C096CB04A3e3362E2b622529EC5f2e8a",
        "network": "Ethereum Mainnet",
        "priceOracleAddress": "0xCe9a6626Eb99eaeA829D7fA613d5D0A2eaE45F40",
        "token": "TBILL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "42161",
        "contractAddress": "0xF84D28A8D28292842dD73D1c5F99476A80b6666A",
        "network": "Arbitrum One",
        "priceOracleAddress": "0xc0952c8ba068c887B675B4182F3A65420D045F46",
        "token": "TBILL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0xdd50C053C096CB04A3e3362E2b622529EC5f2e8a",
        "network": "Ethereum Mainnet",
        "priceOracleAddress": "0xCe9a6626Eb99eaeA829D7fA613d5D0A2eaE45F40",
        "token": "TBILL",
        "wallets": [
          "0x5E6c2AD8376A9E5E857B1d91643399E9aB65ff8c",
        ],
      },
      {
        "chainId": "42161",
        "contractAddress": "0xF84D28A8D28292842dD73D1c5F99476A80b6666A",
        "network": "Arbitrum One",
        "priceOracleAddress": "0xc0952c8ba068c887B675B4182F3A65420D045F46",
        "token": "TBILL",
        "wallets": [
          "0xaAb4Ea02e5616787931c9E8283cb27F0211DC116",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0xdd50C053C096CB04A3e3362E2b622529EC5f2e8a",
        "network": "Ethereum Mainnet",
        "priceOracleAddress": "0xCe9a6626Eb99eaeA829D7fA613d5D0A2eaE45F40",
        "token": "TBILL",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x136471a34f6ef19fE571EFFC1CA711fdb8E49f2b",
        "network": "Ethereum Mainnet",
        "priceOracleAddress": "0x4c48bcb2160F8e0aDbf9D4F3B034f1e36d1f8b3e",
        "token": "USYC",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute openedenAddress endpoint tbill type should return success 1`] = `
{
  "data": {
    "result": [
      {
        "chainId": "1",
        "contractAddress": "0xdd50C053C096CB04A3e3362E2b622529EC5f2e8a",
        "network": "Ethereum Mainnet",
        "priceOracleAddress": "0xCe9a6626Eb99eaeA829D7fA613d5D0A2eaE45F40",
        "token": "TBILL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "42161",
        "contractAddress": "0xF84D28A8D28292842dD73D1c5F99476A80b6666A",
        "network": "Arbitrum One",
        "priceOracleAddress": "0xc0952c8ba068c887B675B4182F3A65420D045F46",
        "token": "TBILL",
        "wallets": [
          "0x5EaFF7af80488033Bc845709806D5Fae5291eB88",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0xdd50C053C096CB04A3e3362E2b622529EC5f2e8a",
        "network": "Ethereum Mainnet",
        "priceOracleAddress": "0xCe9a6626Eb99eaeA829D7fA613d5D0A2eaE45F40",
        "token": "TBILL",
        "wallets": [
          "0x5E6c2AD8376A9E5E857B1d91643399E9aB65ff8c",
        ],
      },
      {
        "chainId": "42161",
        "contractAddress": "0xF84D28A8D28292842dD73D1c5F99476A80b6666A",
        "network": "Arbitrum One",
        "priceOracleAddress": "0xc0952c8ba068c887B675B4182F3A65420D045F46",
        "token": "TBILL",
        "wallets": [
          "0xaAb4Ea02e5616787931c9E8283cb27F0211DC116",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0xdd50C053C096CB04A3e3362E2b622529EC5f2e8a",
        "network": "Ethereum Mainnet",
        "priceOracleAddress": "0xCe9a6626Eb99eaeA829D7fA613d5D0A2eaE45F40",
        "token": "TBILL",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
      {
        "chainId": "1",
        "contractAddress": "0x136471a34f6ef19fE571EFFC1CA711fdb8E49f2b",
        "network": "Ethereum Mainnet",
        "priceOracleAddress": "0x4c48bcb2160F8e0aDbf9D4F3B034f1e36d1f8b3e",
        "token": "USYC",
        "wallets": [
          "0x5BF369282fC12D773b06C6Cdd574CcedaB0C642C",
        ],
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
